--- a/cryptocurrency-exchange-service.properties
+++ b/cryptocurrency-exchange-service.properties
@@ -7,3 +7,4 @@ eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
 coin.market.cap.api=https://api.coinmarketcap.com/v1/ticker
 management.endpoints.web.exposure.include=hystrix.stream
 management.endpoints.web.base-path=/
+eureka.instance.hostname=localhost
