--- a/netflix-eureka-server.properties
+++ b/netflix-eureka-server.properties
@@ -4,3 +4,9 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.instance.hostname=localhost
+logging.level.org.springframework=DEBUG
+logging.level.com.howtodoinjava=DEBUG
+enableLoggingRequestDetails=true
+log4j.logger.org.springframework.orm.jpa=DEBUG
+log4j.logger.org.springframework.transaction=DEBUG
+show_sql=true
