--- a/netflix-eureka-server.properties
+++ b/netflix-eureka-server.properties
@@ -4,9 +4,9 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.instance.hostname=localhost
-logging.level.org.springframework=DEBUG
-logging.level.com.howtodoinjava=DEBUG
-enableLoggingRequestDetails=true
-log4j.logger.org.springframework.orm.jpa=DEBUG
-log4j.logger.org.springframework.transaction=DEBUG
-show_sql=true
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
+ribbon:
+  ConnectTimeout: 120000
+   ReadTimeout: 120000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
