--- a/netflix-zuul-api-gateway-server.properties
+++ b/netflix-zuul-api-gateway-server.properties
@@ -1,3 +1,9 @@
 #port
 server.port=8765
 eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
+ribbon:
+  ConnectTimeout: 120000
+   ReadTimeout: 120000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
